IE fix and change em spacing to fit rem font-size
Benefits articles were broken and spacing of titles in browse
section pages was broken by the switch to rems.

--- a/app/assets/stylesheets/publisher.scss
+++ b/app/assets/stylesheets/publisher.scss
@@ -319,7 +319,9 @@ ul.helpers li.active h3 a {
     width: 75%;
 
     @include ie-lte(8) {
-      height: none;
+      float:left;
+      clear:none;
+      width:74.9%;
     }
 
     .inner {
