--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -32,7 +32,7 @@
 }
 
 #wrapper .ancillary.section-page header h1 {
-  margin: 0 0 0 7.272727273em;
+  margin: 0 0 0 (320 / 48) * 1em;
 }
 
 /* Search results [this needs merging with "Results" section below!]
